@@ -36,7 +36,7 @@ define("ADMIN_USERID",1);
  * 4 - Report all PHP errors (bitwise 63 may be used in PHP 3)
  * 5 - Report all PHP errors (bitwise 63 may be used in PHP 3) + Pragyan CMS Debugging Mode
  */
-$error_level = 4;
+$error_level = 0;
 switch($error_level) {
 	case 0 : $error_text = 0; break;
 	case 1 : $error_text = E_ERROR | E_WARNING | E_PARSE; break;
