@@ -1,3 +1,7 @@
+Revision 44  : Added sphider reindexing frequency by  abhishekdelta  on  2010-06-22 16:51:1
+----------------------------------------------------------------------------------------------
+Revision 43  : Replaces buttons with icons and adminui.css by  abhishekdelta  on  2010-06-22 16:04:0
+----------------------------------------------------------------------------------------------
 Revision 42  : Fixed PDF plugin for images by  abhishekdelta  on  2010-06-21 20:03:2
 ----------------------------------------------------------------------------------------------
 Revision 41  : Bugfixes, Site keywords and desc inputs added by  abhishekdelta  on  2010-06-20 02:47:3
